<resources>
    <string name="app_name">Timer</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_message">Create a new Timer</string>
    <string name="dialog_title">Create a new Timer</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hour">Hours</string>
    <string name="minute">Minutes</string>
    <string name="second">Seconds</string>
    <string name="doublePoint">:</string>
    <string name="dalaran">No active Timer</string>
    <string name="time_for_notifications">Time until Notifications</string>
    <string name="time_in_minutes">Time in minutes</string>
    <string name="notification_strength">Notification strength</string>
    <string name="activate_bluetooth_device">Activate Bluetooth device</string>
    <string name="notification_time">10</string>
    <string name="seekPow">50</string>
    <string name="ble_not_supported">Ble is not supported on this device</string>
    <string name="interruppt">Disconnected from Device</string>
</resources>
