<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/colorSettings">


    <EditText
        android:id="@+id/notification_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/allWhite"
        android:textSize="16dp"
        android:text="10"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/time_for_notifications"/>

    <TextView
        android:id="@+id/minuteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="6dp"
        android:layout_toRightOf="@+id/notification_time"
        android:text="@string/time_in_minutes"
        android:textSize="16dp"
        android:textAlignment="center"
        android:textColor="@color/allWhite"/>


    <SeekBar
        android:id="@+id/powerSeek"
        style="@style/seekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notification_time"
        android:layout_marginTop="24dp"
        android:textColor="@color/allWhite"
        android:progress= "50"        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minuteText"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/powerSeek"
        android:layout_toRightOf="@+id/powerSeek"
        android:text="@string/notification_strength"
        android:textAlignment="center"
        android:textColor="@color/allWhite"
        android:textSize="16dp" />

    <android.support.v7.widget.SwitchCompat
        style="@style/blueSwitch"
        android:id="@+id/blueToothSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/powerSeek"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/powerSeek"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@id/blueToothSwitch"
        android:text="@string/activate_bluetooth_device"
        android:textAlignment="center"
        android:textColor="@color/allWhite"
        android:textSize="16dp" />

</RelativeLayout>